[package]
name = "colamooon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4"
actix-web-httpauth = "0.8.0"
sea-orm = { version = "^0", features = [ "debug-print", "runtime-actix-native-tls", "sqlx-mysql", "macros" ] }
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
